# lintmon

./: .gitignore  README.md  dirmon.yaml  lintmon.yaml  pyproject.toml  setup.cfg
dirmon/: __init__.py  config.py  dirmon.py  monitor_session.py  settings.py  utils.py
lintmon/: __init__.py  config.py  lintmon.py  monitor_session.py  settings.py
