[tool.black]
line-length = 100
skip-string-normalization = true

[tool.poetry]
name = "dirmon"
version = "0.1.0"
description = "Monitor project files in the background and flag issues in your prompt"
authors = ["David Park <david@greenparksoftware.co.uk>"]
license = "Apache-2.0"
repository = "https://github.com/daphtdazz/dirmon"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

packages = [
    { include = "dirmon" }
]

[tool.poetry.scripts]
dirmon-status = "dirmon:status"
dirmon-start = "dirmon:start"
dirmon-stop = "dirmon:stop"
dirmon-run-all = "dirmon:run_all"
dirmon-status-prompt = "dirmon:status_prompt"
dirmond = "dirmon:dirmond"

[tool.poetry.dependencies]
python = ">=3.8"
psutil = ">=5.8.0"
PyYAML = ">=6.0"

[tool.poetry.dev-dependencies]
flake8 = ">=4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
